[gd_scene load_steps=6 format=3 uid="uid://buben8hjsnglk"]

[ext_resource type="Theme" uid="uid://bimr6npwhqrju" path="res://assets/theme.theme" id="1_oho2o"]
[ext_resource type="Script" uid="uid://dbmfbddp1u4n0" path="res://scripts/State-MainMenuState.gd" id="1_wag2k"]
[ext_resource type="PackedScene" uid="uid://2wdygwbi2mlj" path="res://scenes/substates/SubState-OptionsMenu.tscn" id="2_4ayad"]
[ext_resource type="FontFile" uid="uid://fbem0s06kkud" path="res://assets/font/Comic Sans MS.ttf" id="3_lt15m"]

[sub_resource type="Theme" id="Theme_yunyi"]
default_font = ExtResource("3_lt15m")

[node name="MainMenuState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oho2o")
script = ExtResource("1_wag2k")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 22.3333
grow_horizontal = 2
theme = ExtResource("1_oho2o")
theme_override_font_sizes/font_size = 64
text = "GODSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="versionLabel" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -88.0
offset_right = 1280.0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "GODSE v%s"
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -94.5
offset_right = 100.0
offset_bottom = 94.5
grow_horizontal = 2
grow_vertical = 2

[node name="join" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yunyi")
text = "join server"

[node name="host" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yunyi")
text = "host server"

[node name="options" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yunyi")
text = "options"

[node name="username" type="TextEdit" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = SubResource("Theme_yunyi")
placeholder_text = "john GODSE"

[node name="serverIP" type="TextEdit" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = SubResource("Theme_yunyi")
text = "localhost"
placeholder_text = "server ip"

[node name="OptionsMenu" parent="." instance=ExtResource("2_4ayad")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainMenu/VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/options" to="." method="_on_options_pressed"]
